# finance_app

./: .env_sample  .gitignore  pyproject.toml  requirements.txt
finance_app/: forms.py  models.py  urls.py  views.py
finance_app/migrations/: 0001_initial.py  0002_alter_foodproducts_title.py  0003_alter_foodproducts_date.py  0004_rest.py  0005_stuff.py  0006_alter_foodproducts_price_alter_rest_price.py  0007_alter_stuff_price.py  0008_stuffs.py  0009_sstuff.py  0010_ffoodproducts.py  0011_alter_stuffs_month.py  0012_alter_ffoodproducts_month.py
finance_app/templates/finance_app/: add_ffood.html  add_item.html  add_item_form.html  add_rest.html  add_stuff.html  base.html  ffood_list_july.html  ffood_months.html  index.html  items_list.html  items_list_group.html  items_list_group_date.html  rests_list.html  sstuff_list.html  sstuff_list_july.html  stuff_group_title.html  stuff_list.html
finance_app/templatetags/: poll_extras.py
finance_project/: settings.py  urls.py
src/finance_app/: admin.py  forms.py  models.py  urls.py  views.py
src/finance_app/migrations/: 0001_initial.py  0002_alter_category_id_alter_spent_id.py  0002_alter_category_time_create_and_more.py  0002_alter_foodproducts_title.py  0003_alter_foodproducts_date.py  0003_category_archive_spent_archive.py  0004_remove_category_user_remove_spent_user.py  0004_rest.py  0005_stuff.py  0006_alter_foodproducts_price_alter_rest_price.py  0007_alter_stuff_price.py  0008_stuffs.py  0009_sstuff.py  0010_ffoodproducts.py  0011_alter_stuffs_month.py  (+1 more)
src/finance_project/: asgi.py  settings.py  urls.py  wsgi.py
(+24 files in other folders)
